After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756255 - GOutputStream swallowing errors in splice with G_OUTPUT_STREAM_SPLICE_CLOSE_TARGET
GOutputStream swallowing errors in splice with G_OUTPUT_STREAM_SPLICE_CLOSE_T...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-10-08 17:54 UTC by John Hiesey
Modified: 2015-10-08 18:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Report failure properly in g_output_stream_real_splice (988 bytes, patch)
2015-10-08 17:57 UTC, John Hiesey
committed Details | Review

Description John Hiesey 2015-10-08 17:54:49 UTC
When G_OUTPUT_STREAM_SPLICE_CLOSE_TARGET is set in flags, g_output_stream_real_splice() sets error but doesn't return -1 to indicate failure. When G_OUTPUT_STREAM_SPLICE_CLOSE_TARGET is not set it behaves correctly.
Comment 1 John Hiesey 2015-10-08 17:57:36 UTC
Created attachment 312919 [details] [review]
Report failure properly in g_output_stream_real_splice
Comment 2 Alexander Larsson 2015-10-08 18:10:35 UTC
Thanks, i pushed this to master and glib-2-46