goutputstream: Report input stream read failure correctly

When G_OUTPUT_STREAM_CLOSE_TARGET is set,
g_output_stream_real_splice was not returning -1 in any error
cases, since the success flag was being overwritten.

https://bugzilla.gnome.org/show_bug.cgi?id=756255
(cherry picked from commit 16e0a5a886c60a648e74afd12c0cbeeb58d6d522)